--- a/public/bots/styles.css
+++ b/public/bots/styles.css
@@ -1,34 +1,34 @@
 body {
-    background-color: white;
-    margin: 10px;
+    background-color: rgb(235, 209, 218);
+    margin: 50px;
 }
 
 h1 {
     font: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 700;
     color: #172b40;
 }
 
 h2 {
     font: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 600;
     color: #172b40;
 }
 
 h3 {
     font: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
-    font-size: 1.0rem;
+    font-size: 1.1rem;
     font-weight: 600;
-    color: #172b40;
+    color: rgb(1, 110, 1);
 }
 
 h4 {
     font: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
     font-size: 0.9rem;
     font-weight: 500;
-    color: #172b40;
+    color: #0e447e;
 }
 
 h5 {
@@ -96,38 +96,44 @@ code {
     counter-reset: line;
 }
 
-@media (min-width: 700px) {
+a {
+    color: rgb(17, 158, 71);
+}
+
+@media screen and (max-width: 640px) {
     body {
-        margin: 40px;
+        margin: 10px;
+        background-color: rgb(193, 210, 236);
     }
     h1 {
-        font-size: 2rem
+        font-size: 1.0rem
     }
     h2 {
-        font-size: 1.63rem
+        font-size: 0.9rem
     }
     h3 {
-        font-size: 1.2rem
-    }
-    h3 {
-        font-size: 1.2rem
+        font-size: 0.8rem;
+        color: darkblue;
     }
     h4 {
-        font-size: 1.15rem
+        font-size: 0.7rem
     }
     h5 {
-        font-size: 1.15rem
+        font-size: 0.7rem
     }
     h6 {
-        font-size: 1.05rem
+        font-size: 0.7rem
     }
     p {
-        font-size: 1.15rem;
+        font-size: 0.6rem;
     }
     pre {
-        font-size: 1.15rem;
+        font-size: 0.6rem;
     }
     code {
-        font-size: 1.15rem;
+        font-size: 0.6rem;
+    }
+    a {
+        color: rgb(89, 122, 11);
     }
 }
